@@ -32,6 +32,7 @@
 * Implemented functionality which hides inactive members from BuddyPress members list
 * Implemented ability to upgrade subscription for admin gateway
 * Implemented redirect back to a secure page when an user logins on protected page
+* Implemented ability to search members by ID, login, email, url, nice name and display name
 * Improved rendering gateway information at the members list table
 * Improved ping argument processing
 * Improved 100% coupon gateway setup
